<resources>
    <string name="app_name">SEULogin</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="mac_auth">MAC Authentation</string>
    <string name="seu">seu</string>
    <string name="login_url">https://w.seu.edu.cn/index.php/index/login</string>
    <string name="logout_url">https://w.seu.edu.cn/index.php/index/logout</string>
</resources>
